implmented search recipient
