# pb/recipient.pb.gw.go
@@ -227,6 +227,39 @@ func local_request_RecipientService_GetSimilarRecipientsByName_0(ctx context.Con
 	return msg, metadata, err
 }
 
+var filter_RecipientService_SearchRecipientsByAccount_0 = &utilities.DoubleArray{Encoding: map[string]int{}, Base: []int(nil), Check: []int(nil)}
+
+func request_RecipientService_SearchRecipientsByAccount_0(ctx context.Context, marshaler runtime.Marshaler, client RecipientServiceClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var (
+		protoReq SearchRecipientsByAccountRequest
+		metadata runtime.ServerMetadata
+	)
+	io.Copy(io.Discard, req.Body)
+	if err := req.ParseForm(); err != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+	if err := runtime.PopulateQueryParameters(&protoReq, req.Form, filter_RecipientService_SearchRecipientsByAccount_0); err != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+	msg, err := client.SearchRecipientsByAccount(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
+	return msg, metadata, err
+}
+
+func local_request_RecipientService_SearchRecipientsByAccount_0(ctx context.Context, marshaler runtime.Marshaler, server RecipientServiceServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var (
+		protoReq SearchRecipientsByAccountRequest
+		metadata runtime.ServerMetadata
+	)
+	if err := req.ParseForm(); err != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+	if err := runtime.PopulateQueryParameters(&protoReq, req.Form, filter_RecipientService_SearchRecipientsByAccount_0); err != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
+	}
+	msg, err := server.SearchRecipientsByAccount(ctx, &protoReq)
+	return msg, metadata, err
+}
+
 // RegisterRecipientServiceHandlerServer registers the http handlers for service RecipientService to "mux".
 // UnaryRPC     :call RecipientServiceServer directly.
 // StreamingRPC :currently unsupported pending https://github.com/grpc/grpc-go/issues/906.
@@ -352,6 +385,26 @@ func RegisterRecipientServiceHandlerServer(ctx context.Context, mux *runtime.Ser
 			return
 		}
 		forward_RecipientService_GetSimilarRecipientsByName_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+	})
+	mux.Handle(http.MethodGet, pattern_RecipientService_SearchRecipientsByAccount_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		var stream runtime.ServerTransportStream
+		ctx = grpc.NewContextWithServerTransportStream(ctx, &stream)
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		annotatedContext, err := runtime.AnnotateIncomingContext(ctx, mux, req, "/pb.RecipientService/SearchRecipientsByAccount", runtime.WithHTTPPathPattern("/v1/recipients/search-by-account"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := local_request_RecipientService_SearchRecipientsByAccount_0(annotatedContext, inboundMarshaler, server, req, pathParams)
+		md.HeaderMD, md.TrailerMD = metadata.Join(md.HeaderMD, stream.Header()), metadata.Join(md.TrailerMD, stream.Trailer())
+		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
+		if err != nil {
+			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		forward_RecipientService_SearchRecipientsByAccount_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 	})
 
 	return nil
@@ -495,6 +548,23 @@ func RegisterRecipientServiceHandlerClient(ctx context.Context, mux *runtime.Ser
 		}
 		forward_RecipientService_GetSimilarRecipientsByName_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 	})
+	mux.Handle(http.MethodGet, pattern_RecipientService_SearchRecipientsByAccount_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		annotatedContext, err := runtime.AnnotateContext(ctx, mux, req, "/pb.RecipientService/SearchRecipientsByAccount", runtime.WithHTTPPathPattern("/v1/recipients/search-by-account"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := request_RecipientService_SearchRecipientsByAccount_0(annotatedContext, inboundMarshaler, client, req, pathParams)
+		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
+		if err != nil {
+			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		forward_RecipientService_SearchRecipientsByAccount_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+	})
 	return nil
 }
 
@@ -505,6 +575,7 @@ var (
 	pattern_RecipientService_DeleteRecipient_0            = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 1, 0, 4, 1, 5, 2}, []string{"v1", "recipients", "recipient_id"}, ""))
 	pattern_RecipientService_GetRecipient_0               = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 1, 0, 4, 1, 5, 2}, []string{"v1", "recipients", "recipient_id"}, ""))
 	pattern_RecipientService_GetSimilarRecipientsByName_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2}, []string{"v1", "recipients", "search-by-name"}, ""))
+	pattern_RecipientService_SearchRecipientsByAccount_0  = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2}, []string{"v1", "recipients", "search-by-account"}, ""))
 )
 
 var (
@@ -514,4 +585,5 @@ var (
 	forward_RecipientService_DeleteRecipient_0            = runtime.ForwardResponseMessage
 	forward_RecipientService_GetRecipient_0               = runtime.ForwardResponseMessage
 	forward_RecipientService_GetSimilarRecipientsByName_0 = runtime.ForwardResponseMessage
+	forward_RecipientService_SearchRecipientsByAccount_0  = runtime.ForwardResponseMessage
 )
